# udacity-gazebo-world

./: CMakeLists.txt
model/exp_robot/: model.config  model.sdf
model/research_lab/: model.config  model.sdf
model/work_table/: model.sdf
script/: greetings.cpp
world/: rnd_office
